Fixed z-index

--- a/src/pages/Artist/components/Header/Header.scss
+++ b/src/pages/Artist/components/Header/Header.scss
@@ -117,6 +117,7 @@ header {
         margin: 0 -15px;
         position: relative;
         bottom: -15px;
+        z-index: 999;
         & > .navbar-nav {
           border-top: 1px solid #fff;
           & > * {
